<resources>
    <string name="app_name">IM</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">用户注册</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mesg">消息</string>
    <string name="friend">好友</string>
    <string name="send_message">发送</string>
    <string name="user_mesg">个人信息</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="send_mesg">发送消息</string>
    <string name="remove_friend">删除好友</string>
</resources>
